// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`правильно логирует событие показа 1`] = `
Object {
  "event": "VAS_SHOW",
  "price": 1,
  "serviceId": "bind_card",
}
`;

exports[`правильно рисует компонент если есть две привязанные карты или больше 1`] = `
<div
  className="MyWalletCards MyWallet__section"
>
  <Svg
    className="MyWallet__sectionIcon"
    src="svgID"
  />
  <div
    className="MyWallet__sectionLabel"
  >
    Банковские карты
  </div>
  <div
    className="MyWalletCards__cardSelect"
  >
    <Select
      maxMenuHeight={0}
      menuSize="m"
      mode="radio"
      name="cards"
      onChange={[Function]}
      placeholder="—"
      size="l"
      value="4111111111"
    >
      <Item
        key="4111111111"
        value="4111111111"
      >
        4111 11** **** 1111
      </Item>
      <Item
        key="4175000017"
        value="4175000017"
      >
        4175 00** **** 0017
      </Item>
      <Item
        key="5555554444"
        value="5555554444"
      >
        5555 55** **** 4444
      </Item>
    </Select>
    <div
      className="MyWalletCards__unbindCardIcon"
      onClick={[Function]}
    >
      <IconSvg
        id="svgID"
        size="12"
      />
    </div>
  </div>
  <Button
    className="MyWalletCards__bindCardButton"
    color="white"
    onClick={[Function]}
    size="l"
    type="button"
    width="default"
  >
    <IconSvg
      id="svgID"
      size="24"
    />
  </Button>
  <Checkbox
    checked={true}
    onCheck={[Function]}
    size="m"
    type="checkbox"
  >
    Использовать по умолчанию
  </Checkbox>
</div>
`;

exports[`правильно рисует компонент если есть одна привязанная карта 1`] = `
<div
  className="MyWalletCards MyWallet__section"
>
  <Svg
    className="MyWallet__sectionIcon"
    src="svgID"
  />
  <div
    className="MyWallet__sectionLabel"
  >
    Банковские карты
  </div>
  <div
    className="MyWalletCards__cardSelect"
  >
    <Select
      maxMenuHeight={0}
      menuSize="m"
      mode="radio"
      name="cards"
      onChange={[Function]}
      placeholder="—"
      size="l"
      value="4111111111"
    >
      <Item
        key="4111111111"
        value="4111111111"
      >
        4111 11** **** 1111
      </Item>
    </Select>
    <div
      className="MyWalletCards__unbindCardIcon"
      onClick={[Function]}
    >
      <IconSvg
        id="svgID"
        size="12"
      />
    </div>
  </div>
  <Button
    className="MyWalletCards__bindCardButton"
    color="white"
    onClick={[Function]}
    size="l"
    type="button"
    width="default"
  >
    <IconSvg
      id="svgID"
      size="24"
    />
  </Button>
</div>
`;

exports[`правильно рисует компонент если нет привязанных карт 1`] = `
<div
  className="MyWalletCards MyWallet__section"
>
  <Svg
    className="MyWallet__sectionIcon"
    src="svgID"
  />
  <div
    className="MyWallet__sectionLabel"
  >
    Банковские карты
  </div>
  <Button
    className="MyWalletCards__bindCardButton"
    color="white"
    onClick={[Function]}
    size="l"
    type="button"
    width="default"
  >
    <IconSvg
      id="svgID"
      size="24"
    />
  </Button>
</div>
`;

exports[`при клике на кнопку привязки карты залогирует событие клика 1`] = `
Object {
  "event": "VAS_CLICK",
  "price": 1,
  "serviceId": "bind_card",
}
`;

exports[`при клике на кнопку привязки карты откроет окно оплаты с правильными параметрами 1`] = `
Object {
  "from": "desktop-wallet",
  "product": Array [
    Object {
      "count": 1,
      "name": "bind_card",
    },
  ],
  "services": Array [
    Object {
      "service": "yakassa_ac",
    },
  ],
  "successText": "Карта привязана",
}
`;
